# signalforge

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  keep_alive.yml  render-deploy.yml
config/: constants.py  settings.py
data/processed/: crypto_map.parquet  factors_timeseries.parquet  fear_greed.parquet  global_metrics_latest.parquet  ohlcv.parquet  regime.parquet
data/raw/: v1_global-metrics_quotes_latest__f525de1ca7927f2f.json  v3_fear-and-greed_historical__45e0396a68dd885d.json
docs/: ARCHITECTURE.md  CHANGELOG.md  DEMO_SCRIPT.md  JUDGE_CHECKLIST.md  PRODUCT.md  SignalForge-可执行开发文档.md  SignalForge-开发周期表.md  TWAK_GUIDE.md
examples/: client_demo.py  twak_demo.py
outputs/: backtest_results.json  cmc_provenance.json  latest_snapshot.json  reproduce_manifest.json  research_results.json  sample_live_verdict.json
outputs/llm_logs/: README.md  chat_1781082559012.json  report_1781082621602.json  strategy_desc_1781082573832.json
outputs/onchain/: twak_demo_evidence.txt  x402_receipt.json
outputs/reports/: research_report.md
outputs/specs/: signalforge-cmc-fg-regime-v1.json
outputs/verdicts/: sample_honest.json  sample_leakage.json
scripts/: 00_smoke_test.py  01_pull_data.py  02_build_factors.py  03_run_research.py  04_backtest.py  05_generate_spec.py  06_write_report.py  07_adjudicate_demo.py  08_prove_x402_cmc.py  09_e2e_smoke_test.py  10_manual_apex_fund.py  check_env.py  check_no_key_reproduction.py  init_outputs.py  reproduce.py
service/: SKILL.md  app.py  config.json  x402_middleware.py
src/adjudicator/: __init__.py  core.py  (+3 more)
tests/: conftest.py  test_adjudicator.py  test_audit_fixes.py  test_ic.py  test_leakage.py  test_mcp_client.py  test_multiple_testing.py  test_no_lookahead.py  test_provenance.py  test_scoring.py  test_skill_service.py  test_skill_wrapper.py  test_spec.py  test_strategy.py  test_survivorship.py  test_x402_client.py
ui/: .env.example  index.html  package-lock.json  package.json  vite.config.js
(+36 files in other folders)
