[project]
name = "signalforge"
version = "0.1.0"
description = "CMC proprietary-indicator factor research engine"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "matplotlib>=3.9",
    "plotly>=5.22",
    "openai>=1.30",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]
